# NodeWorldOfText

./: .gitattributes  .gitignore  DeveloperInstructions.md  Dockerfile  LICENSE  README.md  database_thread.js  ecosystem.config.js  main.js  package.json  runserver.js  settings.js  settings.json  settings_example.json  settings_template.json
backend/: chat.sql  database_thread.js  default.sql  dump_dir.js  edits.sql  images.sql  indexes.sql  mime.js  misc.sql  prompt.js  read.js
backend/cred/: owot support cred.txt
backend/framework/: ipaddress.js  server.js  templates.js  utils.js
backend/migrations/: from-1.js  up-1.js
backend/modules/: clear_areas.js  fetch_tiles.js  protect_areas.js  write_data.js  write_links.js
backend/monitor/: login.html  monitor.html  monitor.js
backend/pages/: 404.js  accounts_download.js  accounts_nsfw.js  accounts_tabular.js  accounts_verify_email.js  activate.js  activate_complete.js  administrator.js  administrator_backgrounds.js  administrator_edits.js  administrator_file_list.js  administrator_files.js  (+50 more)
docs/: binary-format.txt  custom-roles-feature.txt  database-backup.txt  database-struct.txt  dual-accounts.txt  faster-db.txt  todo-document.txt  uvias-id-standard.txt
keys/: id_rsa.pub
owot-ws-sidecar/: Cargo.toml  README.md
owot-ws-sidecar/src/: auth.rs  broadcast.rs  char_prot.rs  config.rs  db.rs  main.rs  pg.rs  redis_bus.rs  relay.rs  storage.rs  tile.rs  tile_redis.rs  world.rs  ws.rs
scripts/: migrate-worlds-to-pg.js  owot-image-drawer-unlimited-rates.patch.js  setup-pg-worlds.sh  setup-pgbouncer-owot.sh
(+243 files in other folders)
